# djangogbucket

./: .gitignore  README.md  manage.py  pyproject.toml
djangogbucket/: api.py  asgi.py  settings.py  urls.py  wsgi.py
fileobjects/: api.py  apps.py  views.py
